Mise en place du Logging, début de nettoyage des commentaires

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=safetynetalerts
 
 logging.level.root = error
-logging.level.com.openclassrooms=info
+logging.level.com.openclassrooms=debug
+
+spring.output.ansi.enabled = ALWAYS
