--- a/pom.xml
+++ b/pom.xml
@@ -150,13 +150,23 @@
                 <version>3.2.5</version>
                 <configuration>
                     <includes>
-                        <include>**/*Test.java</include>
                         <include>**/*UT.java</include>
                         <include>**/*IT.java</include>
+                        <include>**/*E2E.java</include>
                     </includes>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.2.5</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
